Update to the new API definition (at c954debcf7511c918f5bc50904e7ab68e1c8dedd) (#66)
Fixes wing-aviation/InterUSS-Platform#109
