# api.yaml
@@ -184,7 +184,7 @@ paths:
       description: |-
         Create a new Identification Service Area.  This call will fail if an Identification Service Area with the same ID already exists.
 
-        The DSS assumes the USS has already added the appropriate retention period to operation end time in `time_end` field before storing it.  Updating `time_start` is not allowed if it is before the current time.
+        The DSS assumes the USS has already added the appropriate retention period to operation end time in `time_end` field before storing it.
     parameters:
     - name: id
       description: EntityUUID of the Identification Service Area.
@@ -1445,116 +1445,6 @@ components:
             required by law in a region.
           type: string
           example: FA12345897
-    RIDAircraftState:
-      description: State of an aircraft for the purposes of remote ID.
-      required:
-      - timestamp
-      - timestamp_accuracy
-      - accuracy_h
-      - accuracy_v
-      - speed
-      - vertical_speed
-      - track
-      - speed_accuracy
-      - position
-      type: object
-      properties:
-        timestamp:
-          format: date-time
-          description: Time at which this state was valid.  This may be the time coming
-            from the source, such as a GPS, or the time when the system computes the
-            values using an algorithm such as an Extended Kalman Filter (EKF).  Timestamp
-            must be expressed with a minimum resolution of 1/10th of a second.  RFC
-            3339 format, per OpenAPI specification.
-          type: string
-        timestamp_accuracy:
-          format: float
-          description: 'Declaration of timestamp accuracy, which is the largest difference
-            between Timestamp and true time of applicability for any of the following
-            fields: Latitude, Longitude, Geodetic Altitude, Pressure Altitude of Position,
-            Height. to determine time of applicability of the location data provided.  Expressed
-            in seconds, precise to 1/10ths of seconds. The accuracy reflects the 95%
-            uncertainty bound value for the timestamp.'
-          minimum: 0
-          exclusiveMinimum: false
-          type: number
-        operational_status:
-          $ref: '#/components/schemas/RIDOperationalStatus'
-        position:
-          $ref: '#/components/schemas/RIDAircraftPosition'
-        track:
-          format: float
-          description: Direction of flight expressed as a "True North-based" ground
-            track angle.  This value is provided in degrees East of North with a minimum
-            resolution of 1 degree.
-          maximum: 360
-          exclusiveMaximum: true
-          minimum: 0
-          exclusiveMinimum: false
-          type: number
-        speed:
-          format: float
-          description: Ground speed of flight in meters per second.
-          minimum: 0
-          exclusiveMinimum: false
-          type: number
-          example: 1.9
-        speed_accuracy:
-          anyOf:
-          - $ref: '#/components/schemas/SpeedAccuracy'
-          description: Accuracy of horizontal ground speed.
-        vertical_speed:
-          format: float
-          description: Speed up (vertically) WGS84-HAE, m/s.
-          type: number
-          example: 0.2
-        height:
-          $ref: '#/components/schemas/RIDHeight'
-        group_radius:
-          format: float
-          description: Farthest horizontal distance from reported group location at
-            which an aircraft in the group may be located (meters).
-          minimum: 0
-          exclusiveMinimum: true
-          type: number
-        group_ceiling:
-          format: float
-          description: Maximum altitude (meters WGS84-HAE) of Group Operation
-          type: number
-        group_floor:
-          format: float
-          description: Minimum altitude (meters WGS84-HAE) of Group Operation.  If
-            not specified, ground level shall be assumed.
-          type: number
-        group_count:
-          format: int32
-          description: When operating a group (or formation or swarm), number of aircraft
-            in group.
-          minimum: 1
-          exclusiveMinimum: false
-          type: integer
-    RIDAircraftType:
-      description: |-
-        Type of aircraft for the purposes of remote ID.
-
-        `VTOL` is a fixed wing aircraft that can take off vertically.  `Rotocraft` includes multirotor.
-      enum:
-      - NotDeclared
-      - Aeroplane
-      - Rotorcraft
-      - Gyroplane
-      - VTOL
-      - Ornithopter
-      - Glider
-      - Kite
-      - FreeBalloon
-      - CaptiveBalloon
-      - Airship
-      - FreeFallOrParachute
-      - Rocket
-      - GroundObstacle
-      - Other
-      type: string
     RIDRecentAircraftPosition:
       description: ""
       required:
@@ -1573,10 +1463,10 @@ components:
       description: Response to DSS request for the identification service area with
         the given id.
       required:
-      - identification_service_area
+      - service_area
       type: object
       properties:
-        identification_service_area:
+        service_area:
           $ref: '#/components/schemas/IdentificationServiceArea'
     CreateIdentificationServiceAreaParameters:
       description: Parameters for a request to create an Identification Service Area
@@ -1590,7 +1480,7 @@ components:
           anyOf:
           - $ref: '#/components/schemas/Volume4D'
           description: |-
-            The bounding spacetime extents of this Identification Service Area.  Start and end times must be specified.
+            The bounding spacetime extents of this Identification Service Area.  End time must be specified.  If start time is not specified, it will be set to the current time.  Start times in the past should be rejected by the DSS, except that it may adjust very recent start times to the current time.
 
             These extents should not reveal any sensitive information about the flight or flights within them.  This means, for instance, that extents should not tightly-wrap a flight path, nor should they generally be centered around the takeoff point of a single flight.
         flights_url:
@@ -1607,7 +1497,7 @@ components:
           anyOf:
           - $ref: '#/components/schemas/Volume4D'
           description: |-
-            The bounding spacetime extents of this Identification Service Area.  Start and end times must be specified.
+            The bounding spacetime extents of this Identification Service Area.  End time must be specified.  If start time is not specified, it will remain unchanged.  Start times in the past should be rejected by the DSS unless they are unchanged from the Identification Service Area's current start time.
 
             These extents should not reveal any sensitive information about the flight or flights within them.  This means, for instance, that extents should not tightly-wrap a flight path, nor should they generally be centered around the takeoff point of a single flight.
         flights_url:
@@ -1702,8 +1592,7 @@ components:
           $ref: '#/components/schemas/RIDFlightsURL'
         owner:
           description: Assigned by the DSS based on creating client’s ID (via access
-            token).  Used for restricting mutation and deletion operations to owner,
-            and only requiring EntitySignatures for unowned Entities.
+            token).  Used for restricting mutation and deletion operations to owner.
           type: string
           example: myuss
         time_start:
@@ -1720,6 +1609,136 @@ components:
           anyOf:
           - $ref: '#/components/schemas/EntityUUID'
           description: Unique identifier for this Identification Service Area.
+    RIDAircraftState:
+      description: State of an aircraft for the purposes of remote ID.
+      required:
+      - timestamp
+      - timestamp_accuracy
+      - accuracy_h
+      - accuracy_v
+      - speed
+      - vertical_speed
+      - track
+      - speed_accuracy
+      - position
+      type: object
+      properties:
+        timestamp:
+          format: date-time
+          description: Time at which this state was valid.  This may be the time coming
+            from the source, such as a GPS, or the time when the system computes the
+            values using an algorithm such as an Extended Kalman Filter (EKF).  Timestamp
+            must be expressed with a minimum resolution of 1/10th of a second.  RFC
+            3339 format, per OpenAPI specification.
+          type: string
+        timestamp_accuracy:
+          format: float
+          description: 'Declaration of timestamp accuracy, which is the largest difference
+            between Timestamp and true time of applicability for any of the following
+            fields: Latitude, Longitude, Geodetic Altitude, Pressure Altitude of Position,
+            Height. to determine time of applicability of the location data provided.  Expressed
+            in seconds, precise to 1/10ths of seconds. The accuracy reflects the 95%
+            uncertainty bound value for the timestamp.'
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+        operational_status:
+          $ref: '#/components/schemas/RIDOperationalStatus'
+        position:
+          $ref: '#/components/schemas/RIDAircraftPosition'
+        track:
+          format: float
+          description: Direction of flight expressed as a "True North-based" ground
+            track angle.  This value is provided in degrees East of North with a minimum
+            resolution of 1 degree.
+          maximum: 360
+          exclusiveMaximum: true
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+        speed:
+          format: float
+          description: Ground speed of flight in meters per second.
+          minimum: 0
+          exclusiveMinimum: false
+          type: number
+          example: 1.9
+        speed_accuracy:
+          anyOf:
+          - $ref: '#/components/schemas/SpeedAccuracy'
+          description: Accuracy of horizontal ground speed.
+        vertical_speed:
+          format: float
+          description: Speed up (vertically) WGS84-HAE, m/s.
+          type: number
+          example: 0.2
+        height:
+          $ref: '#/components/schemas/RIDHeight'
+        group_radius:
+          format: float
+          description: Farthest horizontal distance from reported group location at
+            which an aircraft in the group may be located (meters).  This value contains
+            the "Operating Area Radius" data from the common data dictionary when
+            group operation area is specified by point-radius.
+          minimum: 0
+          exclusiveMinimum: true
+          type: number
+        group_ceiling:
+          format: float
+          description: Maximum altitude (meters WGS84-HAE) of Group Operation.  This
+            value contains the "Operating Area Ceiling" data from the common data
+            dictionary when group operation area is specified by point-radius.
+          type: number
+        group_floor:
+          format: float
+          description: Minimum altitude (meters WGS84-HAE) of Group Operation.  If
+            not specified, ground level shall be assumed.  This value contains the
+            "Operating Area Floor" data from the common data dictionary when group
+            operation area is specified by point-radius.
+          type: number
+        group_count:
+          format: int32
+          description: When operating a group (or formation or swarm), number of aircraft
+            in group.  This value contains the "Operating Area Count" data from the
+            common data dictionary when group operation area is specified by point-radius.
+          minimum: 1
+          exclusiveMinimum: false
+          type: integer
+        group_time_start:
+          format: date-time
+          description: Time at which a group operation starts.  This value contains
+            the "Operation Area Start" data from the common data dictionary when group
+            operation area is specified by point-radius.
+          type: string
+        group_time_end:
+          format: date-time
+          description: Time at which a group operation starts.  This value contains
+            the "Operation Area End" data from the common data dictionary when group
+            operation area is specified by point-radius.
+          type: string
+    RIDAircraftType:
+      description: |-
+        Type of aircraft for the purposes of remote ID.
+
+        `VTOL` is a fixed wing aircraft that can take off vertically.  `Rotocraft` includes multirotor.
+      enum:
+      - NotDeclared
+      - Aeroplane
+      - Rotorcraft
+      - Gyroplane
+      - VTOL
+      - Ornithopter
+      - Glider
+      - Kite
+      - FreeBalloon
+      - CaptiveBalloon
+      - Airship
+      - FreeFallOrParachute
+      - Rocket
+      - TetheredPoweredAircraft
+      - GroundObstacle
+      - Other
+      type: string
   securitySchemes:
     AuthFromAuthorizationAuthority:
       flows:
